src/plan/snapshots/asupersync__plan__analysis__tests__golden_full_analysis_single_leaf.snap
---
source: src/plan/analysis.rs
assertion_line: 3282
expression: "format!(\"{}\", analysis)"
---
Plan Analysis Report
====================

Summary: 1/1 safe, 0 obligation issue(s), 0 cancel issue(s)
Overall Safe: true

Safe Nodes (1):
  Node 0: clean (cost: alloc=1 cancel=1 obl=0 depth=1)

Detailed Node Analysis:
----------------------
Node 0:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
