src/plan/snapshots/asupersync__plan__analysis__tests__golden_full_analysis_timeout_structure.snap
---
source: src/plan/analysis.rs
expression: "format!(\"{}\", analysis)"
---
Plan Analysis Report
====================

Summary: 2/2 safe, 0 obligation issue(s), 0 cancel issue(s)
Overall Safe: true

Safe Nodes (2):
  Node 0: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 1: clean (cost: alloc=2 cancel=1 obl=0 depth=2)

Detailed Node Analysis:
----------------------
Node 0:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 1:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1] deadline=[100ms, 100ms]
  Cost: alloc=2 cancel=1 obl=0 depth=2
  Obligation Flow: reserves=[] [all-paths-ok]
