src/plan/snapshots/asupersync__plan__analysis__tests__golden_obligation_node_analysis.snap
---
source: src/plan/analysis.rs
assertion_line: 3397
expression: "format!(\"{}\", node_analysis)"
---
Node 0 Analysis:
  Obligation Safety: clean (effective: may-leak)
  Cancel Safety: safe
  Budget Effect: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=1 depth=1
  Obligation Flow: reserves=["obl:lease:critical"] must_resolve=["obl:lease:critical"] leak_on_cancel=["obl:lease:critical"] [all-paths-ok]
  Overall Safe: false
