src/plan/snapshots/asupersync__plan__analysis__tests__golden_single_node_analysis.snap
---
source: src/plan/analysis.rs
assertion_line: 3386
expression: "format!(\"{}\", node_analysis)"
---
Node 0 Analysis:
  Obligation Safety: clean (effective: clean)
  Cancel Safety: safe
  Budget Effect: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
  Overall Safe: true
