src/plan/snapshots/asupersync__plan__analysis__tests__obligation_flow_empty.snap
---
source: src/plan/analysis.rs
expression: "format!(\"{}\", empty_flow)"
---
reserves=[] [all-paths-ok]
