src/plan/snapshots/asupersync__plan__analysis__tests__obligation_flow_with_obligation.snap
---
source: src/plan/analysis.rs
expression: "format!(\"{}\", flow_with_obligation)"
---
reserves=["test_obligation"] must_resolve=["test_obligation"] leak_on_cancel=["test_obligation"] [all-paths-ok]
