src/plan/snapshots/asupersync__plan__analysis__tests__obligation_safety_leaked.snap
---
source: src/plan/analysis.rs
expression: "format!(\"{}\", ObligationSafety::Leaked)"
---
leaked
