src/plan/snapshots/asupersync__plan__analysis__tests__obligation_safety_may_leak.snap
---
source: src/plan/analysis.rs
expression: "format!(\"{}\", ObligationSafety::MayLeak)"
---
may-leak
